// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@modernpoacher/cogs/cogs/select/field <Field /> With additional props renders 1`] = `
<select
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  multiple={true}
  name="MOCK NAME"
  onChange={[Function]}
  readOnly={true}
  required={true}
/>
`;

exports[`@modernpoacher/cogs/cogs/select/field <Field /> With required props renders 1`] = `
<select
  className="MOCK CLASSNAME"
  disabled={false}
  multiple={false}
  name="MOCK NAME"
  onChange={[Function]}
  readOnly={false}
  required={false}
/>
`;
